# sdk

./: .gitignore  CONTRIBUTING.md  README.md
.github/: auto_assign.yml
.github/workflows/: codecov.yaml  reviewer.yaml  test-zephyr-ble-decrypt-unit.yaml
docs/quickstart/zephyr/: index.rst
include/: hubble_ble.h  hubble_port.h
include/hubble/: ad_helper.h  ble.h  hubble.h
include/hubble/ble/: utils.h
include/hubble/config/: default.h
include/hubble/port/: crypto.h  sat_radio.h  sys.h
include/hubble/sat/: ephemeris.h  packet.h
port/esp-idf/: hubble_esp_idf.c  port_types.h
port/esp-idf/hubblenetwork-sdk/: CMakeLists.txt  Kconfig
port/freertos/: config.h
port/zephyr/: CMakeLists.txt  Kconfig  hubble_ble_zephyr.c  hubble_ble_zephyr_psa.c  hubble_zephyr.c  port_types.h
python/: README.md  hubblexe.spec  pyproject.toml
python/src/hubble/: __init__.py  ble.py  cli.py  demo.py
python/tests/integration/: test_ble_scan.py
samples/esp-idf/ble-beacon/main/: main.c
samples/esp-idf/sat-gnss/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
samples/zephyr/ble-beacon/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/zephyr/ble-network/: prj.conf
samples/zephyr/sat-gnss/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
src/: hubble.c  hubble_ble.c  hubble_priv.h  hubble_sat.c  hubble_sat_ephemeris.c  hubble_sat_packet_v2.c
src/crypto/: mbedtls.c  psa.c
src/utils/: ad_helper_zephyr.c  bitarray.c
tests/unit-tests/: CMakeLists.txt
tests/zephyr/ble-network/: testcase.yaml
tools/: scan.py
(+31 files in other folders)
