[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubble-sdk"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
description = "Hubble SDK host-side tools"
dependencies = [
  "httpx>=0.27",
  "bleak",
  "click",
  "geocoder",
  "pycryptodome",
  "pylink-square",
  "requests",
  "pyelftools",
]

[project.scripts]
hubble = "hubble.cli:main"     # installs a `hubble` console script

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["hubble*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "ble: tests that require BLE hardware/permissions",
  "integration: slow or environment-dependent tests",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov",
  "mypy",
  "ruff",
  "pycryptodome",
]
demo = [
  "pylink-square",
  "requests",
  "pyelftools",
  "geocoder",
]
